2003-06-24 Aleksey Ryabchuk <ryabchuk@yahoo.com>
	* TreeNode.cs
	* TreeNodeCollection.cs
	* TreeView.cs : more implementation added

2003-06-12 Aleksey Ryabchuk <ryabchuk@yahoo.com>
	* Menu.cs
	* ContextMenu.cs : create context menu using CreatePopupMenu function

2003-06-12 Aleksey Ryabchuk <ryabchuk@yahoo.com>
	* TreeNode.cs
	* TreeNodeCollection.cs
	* TreeView.cs
	* win32functions.cs : started impl. of TreeView control

2003-06-12 Aleksey Ryabchuk <ryabchuk@yahoo.com>
	* Control.cs : don't do anything if Anchor is set to default value
	* SystemInformation.cs : return some system metrics
	* UserControl.cs : default size impl.

2003-06-11 Aleksey Ryabchuk <ryabchuk@yahoo.com>
	* ContextMenu.cs : SourceControl, Show method
	* Control.cs : ContextMenu, CanSelect, force parent to perform layout when Dock property changes
	* GroupBox.cs
	* Label.cs
	* Panel.cs
	* PictureBox.cs
	* Splitter.cs
	* ProgressBar.cs : remove Selectable style
	* RadioButton.cs : set TextAlign to MiddleLeft by default
	* tooltip.cs : override Dispose method
	* win32Enums.cs
	* win32functions.cs : flags and function for context menu

2003-06-09 Aleksey Ryabchuk <ryabchuk@yahoo.com>
	* Conrols.cs : Disposing property, Dispose method
	* Cursor.cs  : Show, Hide, Copy cursor
	* NativeWindow.cs : destructor

2003-06-09 Aleksey Ryabchuk <ryabchuk@yahoo.com>
	* Control.cs : Cursor property, handle WM_SETCURSOR
	* Cursor.cs : started implementation
	* Cursors.cs : load system cursor types
	* win32functions.cs : DestroyCursor function

2003-06-09 Aleksey Ryabchuk <ryabchuk@yahoo.com>
	* HScrollBar.cs
	* ScrollBar.cs
	* VScrollBar.cs : implemented
	* ScrollEventArgs.cs: typo fix

2003-06-09 Aleksey Ryabchuk <ryabchuk@yahoo.com>
	* AxHost.cs
	* MonthCalendar.cs : fixed issues breaking the build

2003-06-09 Dennis Hayes <dennish@raytek.com>
	for Gopal V <gopalv82@symonds.net>
	* MonthCalendar.cs
	* AxHost.cs
	Fixed overrides

2003-06-07   Alexandre Pigolkine <pigolkine@gmx.de>
	* Control.cs
	* Form.cs